--- a/Payment-form.html
+++ b/Payment-form.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment Form</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Payment Form</h1>
